addesd all file

--- a/style.css/doneted.css
+++ b/style.css/doneted.css
@@ -35,15 +35,12 @@
     max-width: 1440px;
     margin: 0 auto;
     width: 100%;
+    padding: 20px;
+    object-fit: cover;
 }
 
-.banner-container {
-    max-width: 1440px;
-    margin: 0 auto;
 
 
-
-}
 
 .banner-content {
     max-width: 850px;
@@ -157,7 +154,7 @@ main {
     font-style: normal;
     font-weight: 400;
     line-height: 28px;
-    /* border-bottom: 1px solid gray; */
+
 }
 
 .border {
@@ -298,7 +295,18 @@ main {
     max-width: 456px;
 }
 
-.get-my-updates {
+/* get-my-updates section */
+.my-updates {
+    max-width: 809px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.input-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
     background: #FFF4D6;
     padding-top: 76px;
     padding-right: 345px;
@@ -306,26 +314,6 @@ main {
     padding-left: 189px;
     margin-top: 130px;
     text-align: center;
-}
-
-/* 
-
-.Subscribe-button {
-    background: #FFF4D6;
-    padding-top: 76px;
-    padding-right: 345px;
-    padding-bottom: 76px;
-    padding-left: 189px;
-    width: 809px; 
-display: flex;
-    align-items: center;
-    gap: 0; 
-} */
-.input-text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0;
 }
 
 .input-text input {
@@ -436,7 +424,7 @@ display: flex;
         padding: 76px;
     }
 
-    .input-text input {
+    .input-text {
         width: 100%;
 
 
